1. modify compile level from 1.5 to 1.7 2. support minicluster and add a junit for it.