@@ -3,6 +3,12 @@
   <groupId>org.wliu.mr.demo</groupId>
   <artifactId>org.wliu.mr.demo</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <properties>
+		<hadoop.version>2.6.0-cdh5.4.0</hadoop.version>
+		<hbase.version>1.0.0-cdh5.4.0</hbase.version>
+	</properties>
+  
   <repositories>
     <repository>
       <id>cloudera</id>
@@ -26,37 +32,37 @@
 	<dependency>
 		<groupId>org.apache.hadoop</groupId>
 		<artifactId>hadoop-mapreduce-client-core</artifactId>
-		<version>2.6.0-cdh5.4.0</version>
+		<version>${hadoop.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.apache.hadoop</groupId>
 		<artifactId>hadoop-common</artifactId>
-		<version>2.6.0-cdh5.4.0</version>
+		<version>${hadoop.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.apache.hadoop</groupId>
 		<artifactId>hadoop-hdfs</artifactId>
-		<version>2.6.0-cdh5.4.0</version>
+		<version>${hadoop.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.apache.hadoop</groupId>
 		<artifactId>hadoop-mapreduce-client-jobclient</artifactId>
-		<version>2.6.0-cdh5.4.0</version>
+		<version>${hadoop.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.apache.hadoop</groupId>
 		<artifactId>hadoop-mapreduce-client-common</artifactId>
-		<version>2.6.0-cdh5.4.0</version>
+		<version>${hadoop.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.apache.hadoop</groupId>
 		<artifactId>hadoop-mapreduce-client-shuffle</artifactId>
-		<version>2.6.0-cdh5.4.0</version>
+		<version>${hadoop.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.apache.hadoop</groupId>
 		<artifactId>hadoop-mapreduce-client-app</artifactId>
-		<version>2.6.0-cdh5.4.0</version>
+		<version>${hadoop.version}</version>
 	</dependency>
   	<dependency>
   		<groupId>org.apache.avro</groupId>
@@ -68,14 +74,30 @@
   	<dependency>
   		<groupId>org.apache.hbase</groupId>
   		<artifactId>hbase-client</artifactId>
-		<version>1.0.0-cdh5.4.0</version>
+		<version>${hbase.version}</version>
   	</dependency>
 
   	<dependency>
   		<groupId>org.apache.hbase</groupId>
   		<artifactId>hbase-server</artifactId>
-		<version>1.0.0-cdh5.4.0</version>
+		<version>${hbase.version}</version>
   	</dependency>
+  	
+  	<!-- for hbase minicluster testing -->
+  	<dependency>
+  		<groupId>org.apache.hbase</groupId>
+  		<artifactId>hbase-testing-util</artifactId>
+		<version>${hbase.version}</version>
+		<scope>provided</scope>
+  	</dependency>
+  	
+  	<!-- junit4 -->
+  		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
   	
   	<!-- mapreduce mrunit -->
   	<dependency>
@@ -83,6 +105,16 @@
   		<artifactId>mrunit</artifactId>
   		<version>1.1.0</version>
   		<classifier>hadoop2</classifier>
+  		<scope>test</scope>
+	</dependency>
+  	
+  	<!-- minicluster -->
+  	<dependency>
+		<groupId>org.apache.hadoop</groupId>
+		<artifactId>hadoop-minicluster</artifactId>
+		<version>${hadoop.version}</version>
+		<type>jar</type>
+		<scope>test</scope>
 	</dependency>
   	
   	<dependency>
@@ -109,5 +141,26 @@
 				</executions>
 			</plugin>
 		</plugins>
+		
+			<pluginManagement>
+			<plugins>
+				<plugin>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<configuration>
+						<source>1.7</source>
+						<target>1.7</target>
+					</configuration>
+				</plugin>
+				<!-- 
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<configuration>
+						<argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+					</configuration>
+				</plugin>
+				 -->
+			</plugins>
+		</pluginManagement>
   </build>
 </project>
